--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "cross-env": "^5.2.0",
-    "nuxt": "^2.0.0",
+    "@nuxtjs/axios": "^5.0.0",
     "@nuxtjs/bulma": "^1.2.0",
-    "@nuxtjs/axios": "^5.0.0"
+    "cross-env": "^5.2.0",
+    "node-sass": "^4.9.4",
+    "nuxt": "^2.0.0",
+    "sass-loader": "^7.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "2.6.2",
+    "nodemon": "^1.11.0",
     "prettier": "1.14.3"
   }
 }
